updates for dora

--- a/papers/1804_dora.md
+++ b/papers/1804_dora.md
@@ -66,3 +66,7 @@ The idea look really interesting and reasonable for *finite* MDPs but...
 ##### Interesting links
 
 1. Marc G. Bellemare, Sriram Srinivasan, Georg Ostrovski, Tom Schaul, David Saxton, Remi Munos. [Unifying Count-Based Exploration and Intrinsic Motivation](https://arxiv.org/abs/1606.01868)
+
+Implementation - https://github.com/nathanwang000/deep_exploration_with_E_network
+
+Review by [VakhrameevaLiza](https://github.com/VakhrameevaLiza) (in russian): https://www.youtube.com/watch?v=WEg-Cd0y6wQ
