--- a/papers/1703_maml.md
+++ b/papers/1703_maml.md
@@ -25,10 +25,10 @@ More precisely, setup for supervised or reinforcement learning (with REINFORCE a
 So, here is main idea:
 
 - take N tasks T with loss function L, you want to be good at
-- for each task create sub-model theta<sub>i<sub>, that is trained and updated for that task; sample new dataset D<sub>i<sub> with (features, targets) for meta-learner
-- then, we train our new model theta as an average-best from theta<sub>i<sub>'s over D<sub>i<sub>'s updates
+- for each task create sub-model theta<sub>i</sub>, that is trained and updated for that task; sample new dataset D<sub>i</sub> with (features, targets) for meta-learner
+- then, we train our new model theta as an average-best from theta<sub>i</sub>'s over D<sub>i</sub>'s updates
 
-Interesting stuff, in original algorithm we need to make last, meta-update, uptimizing theta<sub>i<sub> over theta throung second derivatives. Nevertheless, due to ReLU activation, we can use only by first order approximation.
+Interesting stuff, in original algorithm we need to make last, meta-update, uptimizing theta<sub>i</sub> over theta throung second derivatives. Nevertheless, due to ReLU activation, we can use only by first order approximation.
 
 ###### Results & Experiments
 
