--- a/papers/1703_maml.md
+++ b/papers/1703_maml.md
@@ -32,19 +32,19 @@ Interesting stuff, in original algorithm we need to make last, meta-update, upti
 
 ###### Results & Experiments
 
-####### Regression
+###### Regression
 
 ![alt text](./1703_maml/f2.png)
 
 ![alt text](./1703_maml/f3.png)
 
-####### Classification
+###### Classification
 
 ![alt text](./1703_maml/t1.png)
 
 Interesting, that first order approximation is still very accurate.
 
-####### RL
+###### RL
 
 ![alt text](./1703_maml/f5.png)
 
