bugfix and new paper

--- a/papers/1703_maml.md
+++ b/papers/1703_maml.md
@@ -48,7 +48,7 @@ Interesting, that first order approximation is still very accurate.
 
 ![alt text](./1703_maml/f5.png)
 
-##### Afterworlds
+##### Afterword
 
 MAML looks like very simple, but powerfull approach for model meta-learning.​ Many experiments setups: untrilial regression, few-shot classification learning and velocity adaptation with RL. Lot's of interesting ideas and all is open-sourced. Just great work, you know.
 
