--- a/papers/1804_dora.md
+++ b/papers/1804_dora.md
@@ -56,7 +56,7 @@ But where are neural nets and all kinds of approximations? Finally, a bit of Mou
 
 ![alt text](./1804_dora/f6.png)
 
-##### Afterworlds
+##### Afterword
 
 The idea look really interesting and reasonable for *finite* MDPs but...
 
