Semi-parametric Topological Memory for Navigation

--- a/papers/1702_cmp.md
+++ b/papers/1702_cmp.md
@@ -25,6 +25,8 @@ Nevertheless, I need to mention, that whole pipeline was trained with [DAGGER](h
 
 ![alt text](./1702_cmp/f3.png)
 
+So, *Mapper* builds a 2D multi-scale metric map that is used by *Planner* for end-to-end trainable planning.
+
 ######  Intetesting
 
 - NN mapper works better than analytic one.
@@ -37,6 +39,7 @@ Nevertheless, I need to mention, that whole pipeline was trained with [DAGGER](h
 
 I find quite interesting their approach to visualize the belief state of the agent. Especially, when we have the GT mask.
 
+- This method operates over a discrete grid, but how can we adapt it for non-grid environments?
 - That was the reward function? Distance to the Goal? Or it was imitation learning only?
 - It's a bit unclear how do they translate *semantic task* to something with geometric meaning (looks like geometric tasks are more applicable to grid navigation problem).
 - Can we use memory networks for belief state creation?
